--- a/client/bower.json
+++ b/client/bower.json
@@ -17,7 +17,8 @@
     "ng-file-upload-shim": "9.1.2",
     "ng-tags-input": "3.0.0",
     "ngstorage": "~0.3.9",
-    "typeahead.js": "0.10.5"
+    "typeahead.js": "0.10.5",
+    "bootstrap-sass": "~3.3.6"
   },
   "overrides": {
     "ng-file-upload": {
