--- a/client/bower.json
+++ b/client/bower.json
@@ -18,7 +18,9 @@
     "ng-tags-input": "3.0.0",
     "ngstorage": "~0.3.9",
     "typeahead.js": "0.10.5",
-    "bootstrap-sass": "~3.3.6"
+    "bootstrap-sass": "~3.3.6",
+    "a0-angular-storage": "^0.0.15",
+    "angular-moment": "^0.10.3"
   },
   "overrides": {
     "ng-file-upload": {
