--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,11 @@
     "browserify-shim": "^3.8.9",
     "connect-modrewrite": "^0.8.5",
     "debowerify": "^1.3.1",
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-bower-task": "^0.4.0",
     "grunt-browserify": "^3.8.0",
+    "grunt-cli": "^1.2.0",
     "grunt-config": "^0.3.1",
     "grunt-connect-proxy": "^0.2.0",
     "grunt-contrib-clean": "^0.6.0",
