--- a/client/bower.json
+++ b/client/bower.json
@@ -21,7 +21,8 @@
     "typeahead.js": "0.10.5",
     "bootstrap-sass": "~3.3.6",
     "a0-angular-storage": "^0.0.15",
-    "angular-moment": "^0.10.3"
+    "angular-moment": "^0.10.3",
+    "angular-bootstrap": "^1.3.3"
   },
   "overrides": {
     "ng-file-upload": {
